--- a/TmonNano/TmonNano.csproj
+++ b/TmonNano/TmonNano.csproj
@@ -98,6 +98,7 @@
     <EmbeddedResource Include="TempDisplay.resx">
       <DependentUpon>TempDisplay.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
